fix: prevent layout shift during font loading on page load

--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,7 @@
   src: url('/fonts/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -194,7 +194,7 @@
   src: url('/fonts/Poppins-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -202,7 +202,7 @@
   src: url('/fonts/Poppins-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -210,14 +210,7 @@
   src: url('/fonts/Poppins-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'JetBrains';
-  src: url('/fonts/JetBrainsMono-VariableFont_wght.ttf') format('truetype');
-  font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 body {
@@ -238,10 +231,6 @@ main {
 
 [role='region'] {
   height: 100%;
-}
-
-.jetBrains {
-  font-family: 'JetBrains', sans-serif;
 }
 
 .recharts-legend-item {
